unpackaged/main/default/objects/EventApi__Lightning_Event_Component__mdt/EventApi__Lightning_Event_Component__mdt.object-meta.xml
<CustomObject>
    <description>Registry of Lightning Components enabled for use as Event Page Components for Lightning Events.</description>
    <label>Lightning Event Component</label>
    <pluralLabel>Lightning Event Components</pluralLabel>
</CustomObject>