unpackaged/main/default/objects/EventApi__Lightning_Event_Component__mdt/fields/EventApi__Edit_Lightning_Component_API_Name__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Edit_Lightning_Component_API_Name__c</fullName>
    <description>**Optional** Name of the Lightning component that needs to be instantiated to edit in Event Builder. Only provide the name of the component without namespace.</description>
    <inlineHelpText>**Optional** Name of the Lightning component that needs to be instantiated to edit in Event Builder. Only provide the name of the component without namespace.</inlineHelpText>
    <label>Edit Lightning Component API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>