unpackaged/main/default/objects/EventApi__Lightning_Event_Component__mdt/fields/EventApi__Lightning_Component_API_Name__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Lightning_Component_API_Name__c</fullName>
    <description>**REQUIRED** Name of the Lightning component that needs to be instantiated. Only provide the name of the component without namespace.</description>
    <inlineHelpText>**REQUIRED** Name of the Lightning component that needs to be instantiated. Only provide the name of the component without namespace.</inlineHelpText>
    <label>Lightning Component API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>